@@ -5,9 +5,9 @@ Getting the source
 ------------------
 
 The source can be obtained via mercurial from
-https://bitbucket.org/gocept/nagiosplugin::
+https://bitbucket.org/flyingcircus/nagiosplugin::
 
-   hg clone https://bitbucket.org/gocept/nagiosplugin
+   hg clone https://bitbucket.org/flyingcircus/nagiosplugin
 
 This package supports installation in a virtualenv using zc.buildout.
 
@@ -17,7 +17,7 @@ Creating a build with zc.buildout
 
 First, create a virtualenv if not already present::
 
-   virtualenv -p python3.2 .
+   virtualenv -p python3.4 .
 
 If you want to use Python 2.7, specify this Python version while creating the
 virtualenv::
@@ -28,20 +28,20 @@ Sometimes, you will run into strange setuptools/distribute version conflicts.
 The best way around is to keep setuptools and distribute entirely out of the
 virtualenv::
 
-   virtualenv -p python3.2 --no-setuptools .
+   virtualenv -p python3.4 --no-setuptools .
 
 `bootstrap.py` and zc.buildout will take care of all required dependencies.
 
 Then launch the usual buildout steps::
 
-   bin/python3.2 bootstrap.py
+   bin/python3.4 bootstrap.py
    bin/buildout
 
 
 Tests
 -----
 
-When the buildout succeeds, run the unit test by invoking::
+When buildout succeeds, run the unit test by invoking::
 
    bin/test
 
@@ -92,4 +92,4 @@ published on SemVer_ but adapts it a little bit to be `PEP 386`_ compliant.
 .. _SemVer: http://semver.org/
 .. _PEP 386: http://www.python.org/dev/peps/pep-0386/
 
-.. vim: set ft=rst sw=3 sts=3 et:
+.. vim: set ft=rst spell spelllang=en:
