@@ -13,11 +13,12 @@ coverage = 3.7.1
 createcoverage = 1.2
 docutils = 0.11
 iw.recipe.cmd = 0.3
-Jinja2 = 2.6
+Jinja2 = 2.7.3
+MarkupSafe = 0.23
 nose = 1.3.3
-Pygments = 1.6
-setuptools = 3.6
-Sphinx = 1.2.2
+Pygments = 2.0.1
+setuptools = 11.1
+Sphinx = 1.2.3
 tranchitella.recipe.nose = 0.1
 unittest2 = 0.5.1
 z3c.recipe.scripts = 1.0.1
