@@ -13,6 +13,8 @@ slightly incompatible to the 1.2 series.
   Metric.__str__ is consulted for output generation only when Result.hint is
   None (#13299).
 - Deprecate Metric.description() (#13299).
+- Update docs to reflect the new project tracker URLs and changed author's
+  email address.
 
 
 1.2.2 (2014-05-27)
